@@ -32,7 +32,6 @@ $_ses->_sion->userdata             = array();
 * Be carefull you shouldn't declare sess_start
 * function more than one time, this is important
 * for your application performance. But don't worry
-* about if you declare this func. more than one time
 * it will return to false automatically !!
 * 
 * @see Chapter / Helpers / Session Helper
@@ -47,7 +46,7 @@ function sess_start($params = array())
     if ($session_start == NULL)
     {
         $driver = (isset($params['sess_driver'])) ? $params['sess_driver'] : config_item('sess_driver');
-        loader::file('helpers'. DS .'drivers'. DS .'session'. DS .$driver.'_driver', false, BASE);
+        loader::file('helpers'. DS .'drivers'. DS .'session'. DS .$driver.'_driver'. EXT, false, BASE);
 
         _sess_start($params);
         $session_start = TRUE;
